swap location and date, fix spacing for groups

--- a/wp-content/themes/makerfaire/less/page-entry.less
+++ b/wp-content/themes/makerfaire/less/page-entry.less
@@ -22,7 +22,7 @@
 				list-style: none;
 				font-size: 20px;
 				float: left;
-				margin-left
+				margin-top: 8px;
 				margin-bottom: 3px;
 			}
 		}
